# FormatMigrator

./: .pre-commit-config.yaml  MANIFEST.in  README.md  manifest.ini  package.xml  setup.py
.github/workflows/: codeql.yml  run_unit_tests.yml
freecad/FormatMigrator/: __init__.py
freecad/fcstdmigrator/: __init__.py  discover.py  main.py  migrate.py  migrator.py  xml_utilities.py
freecad/fcstdmigrator/migrations/freecad_1_0/: attachment_support_to_support.py
freecad/fcstdmigrator/migrations/freecad_1_1/: arch_draft_color_transparency_to_alpha.py
freecad/fcstdmigrator/tests/unit/: test_discover.py  test_main.py  test_migrate.py  test_migrator.py  test_xml_utilities.py
freecad/formatmigrator/: discover.py  main.py  migrate.py  migrator.py  xml_utilities.py
freecad/formatmigrator/migrations/freecad-1-0/: attachment_support_to_support.py
freecad/formatmigrator/migrations/freecad_1_1/: arch_draft_color_transparency_to_alpha.py
freecad/formatmigrator/tests/unit/: run_tests.py  test_discover.py  test_main.py  test_migrate.py  test_migrator.py  test_xml_utilities.py
